<resources>
    <string name="app_name">SI-KK2</string>
    <string name="judul">The colors changed since indeed</string>
    <string name="deskripsi">The colors changed since indeed.For example I also had in my code  red500 as fde0dc but it is now f44336.</string>
    <string name="titleA">Title A</string>
    <string name="titleB">Title B</string>
    <string name="title_activity_menu_utama_user">MenuUtamaUser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="daftar">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string-array name="list_kom">
        <item>Jaran Kepang</item>
        <item>Bantengan</item>
        <item>Reog Ponorogo</item>
        <item>Topeng Malangan</item>
        <item>Jaran Kecak</item>
        <item>Kentrung Rajiman</item>
    </string-array>
    <string-array name="mode_pengguna">
        <item>Sebagai User</item>
        <item>Sebagai Komunitas</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Belum Memiliki Akun? Daftar Sekarang!</string>
    <string name="btn_link_to_login">Sudang Memiliki Akun. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Lupa Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="namapemesan">Sugiarto</string>
    <string name="detilPesanan">Memesan : Kesenenian Jaran Kepang, pelaksanaan: 20/06/2018, Jam: 10 pagi</string>


    //judul kesenian
    <string name="ketopraksiswobudoyo">Ketoprak Siswo Budoyo</string>
    <string name="dalangwayangkulit">Dalang Wayang Kulit</string>
    <string name="reogponorogo">Reog Ponorogo</string>
    <string name="taritortor">Tari Tor Tor</string>
    <string name="tarikecak">Tari Kecak</string>

    //deskripsi kesenian
    <string name="des_ketopraksiswobudoyo">Kethoprak dengan pimpinan Anom Sudarsono ada sejak tahun 1989. Kethoprak “ Siswa Budaya “
        mengkolaborasikan seni modern di dalamnya , misalnya untuk musiknya selain gamelan juga ada organ , drum dan yang lainnya.
        Cerita yang ditampilkan juga mampu memikat penonton dari berbagai kalangan baik tua maupun muda , misalnya dengan menyajikan
        adegan romantic yang menggemaskan, adegan perang dengan unsur akrobatik yang mencengangkan dan tidak ketinggalan lawakan-lawakan
        yang lucu dan menggelikan</string>
    <string name="des_dalangwayangkulit">Ki Manteb Soedharsono (lahir di Palur, Mojolaban, Sukoharjo, 31 Agustus 1948; umur 69 tahun)
        adalah seorang dalang wayang kulit ternama yang dari Jawa Tengah. Karena keterampilannya dalam memainkan wayang, ia pun dijuluki
        para penggemarnya sebagai Dalang Setan. Ia juga dianggap sebagai pelopor perpaduan seni pedalangan dengan peralatan musik
        modern.</string>
    <string name="des_reogponorogo">Reog adalah salah satu kesenian budaya yang berasal dari Jawa Timur bagian barat-laut dan Ponorogo
        dianggap sebagai kota asal Reog yang sebenarnya. Gerbang kota Ponorogo dihiasi oleh sosok warok dan gemblak, dua sosok yang
        ikut tampil pada saat reog dipertunjukkan. Reog adalahsalah satu budaya daerah di Indonesia yang masih sangat kental dengan
        hal-hal yang berbau mistik dan ilmu kebatinan yang kuat.</string>
    <string name="des_taritortor">Tari Tor Tor merupakan salah satu jenis tari yang berasal dari suku Batak di Pulau Sumatera.
        Sejak sekitar abad ke-13, Tari Tor Tor sudah menjadi budaya suku Batak. Perkiraan tersebut dikemukakan oleh mantan anggota
        anjungan Sumatera Utara 1973-2010 dan pakar Tari Tor Tor. Dulunya, tradisi Tor Tor hanya ada dalam kehidupan masyarakat suku
        Batak yang berada di kawasan Samosir, kawasan Toba dan sebagian kawasan Humbang. Namun, setelah masukknya Kristen di kawasan
        Silindung, budaya ini dikenal dengan budaya menyanyi dan tarian modern.Di kawasan Pahae dikenal dengan tarian gembira dan lagu
        berpantun yang disebut tumba atau juga biasa disebut Pahae do mula ni tumba.</string>
    <string name="des_tarikecak">Kecak adalah pertunjukan tarian seni khas Bali yang lebih utama menceritakan mengenai Ramayana
        dan dimainkan terutama oleh laki-laki. Tarian ini dipertunjukkan oleh banyak (puluhan atau lebih) penari laki-laki yang
        duduk berbaris melingkar dan dengan irama tertentu menyerukan "cak" dan mengangkat kedua lengan, menggambarkan kisah Ramayana
        saat barisan kera membantu Rama melawan Rahwana. Namun, Kecak berasal dari ritual sanghyang, yaitu tradisi tarian yang penarinya
        akan berada pada kondisi tidak sadar, melakukan komunikasi dengan Tuhan atau roh para leluhur dan kemudian menyampaikan
        harapan-harapannya kepada masyarakat. Para penari yang duduk melingkar tersebut mengenakan kain kotak-kotak seperti papan
        catur melingkari pinggang mereka. Selain para penari itu, ada pula para penari lain yang memerankan tokoh-tokoh Ramayana seperti
        Rama, Shinta, Rahwana, Hanoman, dan Sugriwa</string>

    //Biaya
    <string name="biaya_ketopraksiswobudoyo">15jt</string>
    <string name="biaya_dalangwayangkulit">13jt</string>
    <string name="biaya_reogponorogo">20jt</string>
    <string name="biaya_taritortor">10jt</string>
    <string name="biaya_tarikecak">10jt</string>

    //Rating

    <string name="rate_ketopraksiswobudoyo">5</string>
    <string name="rate_dalangwayangkulit">3</string>
    <string name="rate_reogponorogo">4</string>
    <string name="rate_taritortor">3</string>
    <string name="rate_tarikecak">4</string>
</resources>
